refactor: migrate to rules_oci

--- a/cc/BUILD
+++ b/cc/BUILD
@@ -1,9 +1,9 @@
-package(default_visibility = ["//visibility:public"])
-
+load("@contrib_rules_oci//oci:defs.bzl", "oci_image")
 load("//base:distro.bzl", "DISTROS")
-load("//base:base.bzl", "deb_file")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("//base:base.bzl", "deb_pkg")
 load("//:checksums.bzl", "ARCHITECTURES")
+
+package(default_visibility = ["//visibility:public"])
 
 # distribution-specific deb dependencies
 DISTRO_DEBS = {
@@ -14,15 +14,15 @@ DISTRO_DEBS = {
 
 # An image for C/C++ programs
 [
-    container_image(
+    oci_image(
         name = ("cc" if (not mode) else mode[1:]) + "_" + user + "_" + arch + "_" + distro,
-        architecture = arch,
         base = "//base" + (mode if mode else ":base") + "_" + user + "_" + arch + "_" + distro,
-        debs = [
-            deb_file(arch, distro, "libgomp1"),
-            deb_file(arch, distro, "libstdcpp6"),
-        ] + [deb_file(arch, distro, deb) for deb in DISTRO_DEBS[distro]],
-        stamp = True,
+        tars = [
+            deb_pkg(arch, distro, "libgomp1"),
+            deb_pkg(arch, distro, "libstdcpp6"),
+        ] + [
+            deb_pkg(arch, distro, deb) for deb in DISTRO_DEBS[distro]
+        ],
     )
     for mode in [
         "",
