--- a/java/jetty/BUILD
+++ b/java/jetty/BUILD
@@ -1,14 +1,12 @@
+load("//base:distro.bzl", DISTROS = "LANGUAGE_DISTROS")
+load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "structure_test")
+
 package(default_visibility = ["//visibility:public"])
 
-load("//base:distro.bzl", DISTROS = "LANGUAGE_DISTROS")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
-
-[container_image(
+[oci_image(
     name = rule_name,
     base = base_image,
     cmd = ["/jetty/start.jar"],
-    ports = ["8080"],
     tars = ["@jetty//:tar"],
     workdir = "/jetty",
     # We expect users to add their WAR under /jetty/webapps.
@@ -17,9 +15,9 @@ load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
     ("jetty_java11_debug_debian11", "//java:java11_debug_root_amd64_debian11"),
 ]]
 
-[container_test(
+[structure_test(
     name = "jetty_java11_" + distro + "_test",
-    configs = ["testdata/java11.yaml"],
+    config = ["testdata/java11.yaml"],
     image = ":jetty_java11_" + distro,
     tags = [
         "amd64",
@@ -27,9 +25,9 @@ load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
     ],
 ) for distro in DISTROS]
 
-[container_test(
+[structure_test(
     name = "jetty_java11_debug_" + distro + "_test",
-    configs = ["testdata/java11_debug.yaml"],
+    config = ["testdata/java11_debug.yaml"],
     image = ":jetty_java11_debug_" + distro,
     tags = [
         "amd64",
