--- a/nodejs/BUILD
+++ b/nodejs/BUILD
@@ -1,20 +1,20 @@
-package(default_visibility = ["//visibility:public"])
-
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load("//base:distro.bzl", DISTROS = "LANGUAGE_DISTROS")
 load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
+load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "structure_test")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
+
+package(default_visibility = ["//visibility:public"])
 
 NODEJS_MAJOR_VERISONS = ("14", "16", "18")
 
 [
-    container_image(
+    oci_image(
         name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
-        architecture = arch,
         base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_" + user + "_" + arch + "_" + distro,
         entrypoint = ["/nodejs/bin/node"],
-        stamp = True,
-        tars = ["@nodejs" + major_version + "_" + arch + "//:tar"],
+        tars = [
+            "@nodejs" + major_version + "_" + arch + "//:tar"
+        ],
     )
     for mode in [
         "",
@@ -30,9 +30,9 @@ NODEJS_MAJOR_VERISONS = ("14", "16", "18")
 ]
 
 [
-    container_test(
+    structure_test(
         name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro + "_test",
-        configs = [
+        config = [
             "testdata/nodejs" + major_version + ".yaml",
             "testdata/check_npm.yaml",
         ],
@@ -55,15 +55,18 @@ NODEJS_MAJOR_VERISONS = ("14", "16", "18")
     for distro in DISTROS
 ]
 
-exports_files([
-    "testdata/check_certificate.js",
-])
+pkg_tar(
+    name = "check_certificate",
+    srcs = ["testdata/check_certificate.js"]
+)
 
 [
-    container_image(
+    oci_image(
         name = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
         base = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
-        files = ["testdata/check_certificate.js"],
+        tars = [
+            ":check_certificate"
+        ],
     )
     for mode in [
         "",
@@ -79,9 +82,9 @@ exports_files([
 ]
 
 [
-    container_test(
+    structure_test(
         name = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro + "_test",
-        configs = ["testdata/check_certificate.yaml"],
+        config = ["testdata/check_certificate.yaml"],
         image = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
         tags = [
             arch,
