--- a/java/testdata/java11_nonroot_debian11_libharfbuzz.yaml
+++ b/java/testdata/java11_nonroot_debian11_libharfbuzz.yaml
@@ -3,6 +3,6 @@ commandTests:
   - name: check_libharfbuzz
     command: ["/usr/bin/java",
               "-cp",
-              "/app/distroless/java/check_libharfbuzz_java11_nonroot_debian11.binary.jar:/app/distroless/java/check_libharfbuzz_java11_nonroot_debian11.binary",
+              "/check_libharfbuzz_java11_nonroot_debian11_binary.jar:/check_libharfbuzz_java11_nonroot_debian11_binary",
               "testdata.CheckLibharfbuzz"]
     expectedOutput: ['^\d+ fonts available']
