--- a/java/testdata/java11_root_debian11_encoding.yaml
+++ b/java/testdata/java11_root_debian11_encoding.yaml
@@ -3,7 +3,7 @@ commandTests:
   - name: check_encoding
     command: ["/usr/bin/java",
               "-cp",
-              "/app/distroless/java/check_encoding_java11_root_debian11.binary.jar:/app/distroless/java/check_encoding_java11_root_debian11.binary",
+              "/check_encoding_java11_root_debian11_binary.jar:/check_encoding_java11_root_debian11_binary",
               "testdata.CheckEncoding"]
     expectedOutput: ['LANG=C.UTF-8',
                      'Locale.getDefault\(\)=en',
