introduce oci_image_index targets

--- a/cc/BUILD
+++ b/cc/BUILD
@@ -1,4 +1,4 @@
-load("@contrib_rules_oci//oci:defs.bzl", "oci_image")
+load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
 load("//base:distro.bzl", "DISTROS")
 load("//base:base.bzl", "deb_pkg")
 load("//:checksums.bzl", "ARCHITECTURES")
@@ -13,6 +13,25 @@ DISTRO_DEBS = {
 }
 
 # An image for C/C++ programs
+[
+    oci_image_index(
+        name = ("cc" if not mode else mode[1:]) + "_" + user + "_" + distro,
+        images = [
+            ("cc" if not mode else mode[1:]) + "_" + user + "_" + arch + "_" + distro
+            for arch in ARCHITECTURES
+        ],
+    )
+    for mode in [
+        "",
+        ":debug",
+    ]
+    for user in [
+        "root",
+        "nonroot",
+    ]
+    for distro in DISTROS
+]
+
 [
     oci_image(
         name = ("cc" if (not mode) else mode[1:]) + "_" + user + "_" + arch + "_" + distro,
