--- a/experimental/python3/BUILD
+++ b/experimental/python3/BUILD
@@ -1,4 +1,4 @@
-load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "oci_tarball", "structure_test")
+load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_tarball", "structure_test")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 load("//base:distro.bzl", DISTROS = "LANGUAGE_DISTROS")
@@ -18,6 +18,22 @@ DISTRO_VERSION = {
             "/usr/bin/python3": "/usr/bin/python" + DISTRO_VERSION[distro],
         }
     )
+    for distro in DISTROS
+]
+
+# root
+[
+    oci_image_index(
+        name = ("python3" if (not mode) else mode[1:]) + "_root_" + distro,
+        images = [
+            ("python3" if (not mode) else mode[1:]) + "_root_" + arch + "_" + distro
+            for arch in ARCHITECTURES
+        ]
+    )
+    for mode in [
+        "",
+        ":debug",
+    ]
     for distro in DISTROS
 ]
 
@@ -69,6 +85,22 @@ DISTRO_VERSION = {
         ":debug",
     ]
     for arch in ARCHITECTURES
+    for distro in DISTROS
+]
+
+# nonroot
+[
+    oci_image_index(
+        name = ("python3" if (not mode) else mode[1:]) + "_nonroot_" + distro,
+        images = [
+            ("python3" if (not mode) else mode[1:]) + "_nonroot_" + arch + "_" + distro
+            for arch in ARCHITECTURES
+        ]
+    )
+    for mode in [
+        "",
+        ":debug",
+    ]
     for distro in DISTROS
 ]
 
