Fix: Use `SOURCE_DATE_EPOCH` for the distroless images.
:bug: This uses `SOURCE_DATE_EPOCH` so that instead of the Unix epoch, distroless images use the timestamp of the git commit from which they are built.

For this to take effect, we need to update the build triggers to pass `_COMMIT_DATE` as `$(commit.commit.committer.date)`.

/kind bug

--- a/cc/BUILD
+++ b/cc/BUILD
@@ -22,6 +22,7 @@ DISTRO_DEBS = {
             deb_file(arch, distro, "libgomp1"),
             deb_file(arch, distro, "libstdcpp6"),
         ] + [deb_file(arch, distro, deb) for deb in DISTRO_DEBS[distro]],
+        stamp = True,
     )
     for mode in [
         "",
