make debian_archive lazy

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,9 @@
+# Allow DOCKER_HOST env to leak into test actions. 
 test --test_env=DOCKER_HOST
+
+# TODO: --stamp flag  
 run --workspace_status_command=private/stamp.bash
+
+# Allow external dependencies to be retried. debian snapshot is unreliable and needs retries.
+common --experimental_repository_downloader_retries=20
+common --http_timeout_scaling=2.0
