--- a/private/pkg/BUILD
+++ b/private/pkg/BUILD
@@ -2,9 +2,25 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
 package(default_visibility = ["//visibility:public"])
 
+
+go_binary(
+    name = "oci_image_spdx",
+    srcs = ["oci_image_spdx.go"],
+    deps = [
+        "@com_github_spdx_tools_golang//spdx/v2_3",
+        "@com_github_spdx_tools_golang//spdx/common",
+        "@com_github_spdx_tools_golang//json"
+    ]
+)   
+
 go_binary(
     name = "debian_spdx",
     srcs = ["debian_spdx.go"],
+    deps = [
+        "@com_github_spdx_tools_golang//spdx/v2_3",
+        "@com_github_spdx_tools_golang//spdx/common",
+        "@com_github_spdx_tools_golang//json"
+    ]
 )   
 
 
