--- a/examples/cc/testdata/hello.yaml
+++ b/examples/cc/testdata/hello.yaml
@@ -1,5 +1,5 @@
 schemaVersion: "1.0.0"
 commandTests:
   - name: hello
-    command: ['/app/examples/cc/hello']
+    command: ['/hello_debian11_binary']
     expectedOutput: ['Hello from distroless C!']
