--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: bazelbuild/setup-bazelisk@v2
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
     - name: Build and test
       run: |
         set -ex
